--- a/style.css
+++ b/style.css
@@ -105,3 +105,31 @@ ul li span{
 ul li span:hover{
     background: #edeef0;
 }
+
+@media only screen and (max-width: 600px) {
+    
+    .row{
+        display: flex;
+        flex-direction: column;
+    }
+    button{
+        position: relative;
+        border: none;
+        outline: none;
+        padding: 16px 50px;
+        background: #ff5945;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 40px;
+        bottom: -60px;  
+        left: -9px;
+        width: 80%;
+    }
+    #list-container{
+        padding-top: 50px;
+    }
+    .todo-app h2,img{
+        justify-content: center;
+    }
+}
